--- a/eagle/templates/task/task_create.html
+++ b/eagle/templates/task/task_create.html
@@ -1,4 +1,4 @@
-<div id="task-create-box" class="task-create">
+<div id="task-create-box" class="task-create boxed">
     <a href="#" class="add-new-task">Add New Task</a>
     <div id="edit-task-box" class="edit-task-box">
 
