modify base.css & home.py

--- a/eagle/templates/base.html
+++ b/eagle/templates/base.html
@@ -46,7 +46,7 @@
                     <li><a href="/about/">About</a></li>
                     <li><a href="/faq/">FAQ</a></li>
                     <li><a href="/legal/">Legal</a></li>
-                    <li><span>{% now "Y" %} Eagle | eagle.com </span></li>
+                    <li><a href="#">{% now "Y" %} Eagle | eagle.com</a></li>
                 </ul>
             </div>
         </div>
