--- a/eagle/static/css/base.css
+++ b/eagle/static/css/base.css
@@ -38,11 +38,11 @@ ul {
  */
 
 /**
- * Layout
+ * Layout  in base.html
  */
 #wrapper {
     width: 85.4%;/*965px;*/
-    margin: 0px auto;
+    margin:auto;
 }
 
 #header {
@@ -74,6 +74,29 @@ ul {
     margin-left:61.8%;
 }
 
+#header .header-navigation {
+    float:left;
+    margin-top:8px;
+    margin-left:61.8%;
+}
+#header .header-navigation a {
+    padding:8px;
+    color:#333;
+    font-size:17px;
+    line-height:18px;
+    font-weight:normal;
+    border:1px solid transparent;
+}
+#header .header-navigation a:hover {
+    color:#0d1d3b;
+    border:1px solid white;
+    text-shadow:-1px 1px #d6d6d6;
+}
+#header .header-navigation li{
+    display: block;
+    float:left;
+}
+
 #main {
     -moz-border-radius:10px;
     -webkit-border-radius:10px;
@@ -82,34 +105,16 @@ ul {
     padding:20px;
     margin-top:100px;
 }
-
-.header-navigation {
-    float:left;
-    margin-top:8px;
-    margin-left:61.8%;
-}
-.header-navigation a {
-    padding:9px 10px 8px;
-    color:#333 !important;
-    font-size:17px;
-    line-height:18px;
-    font-weight:normal;
-    text-shadow:-1px 1px #d6d6d6;
-}
-.header-navigation li{
-    display: block;
-    float:left;
-}
 #main-content{
     clear: both;
 }
-.footer-navigation{
+#footer .footer-navigation{
     padding:0 10px;
 }
-.footer-navigation li {
+#footer .footer-navigation li {
     display:inline;
 }
-.footer-navigation a{
+#footer .footer-navigation a{
     margin-right:10px;
     color:#2d4d6b;
     float:left;
@@ -118,7 +123,7 @@ ul {
     padding:10px;
     text-shadow:1px 1px #bde0ff;
 }
-.footer-navigation a:hover{
+#footer .footer-navigation a:hover {
     color:#0d1d3b;
 }
 
@@ -130,8 +135,14 @@ ul {
     float:left;
     color:#d1e8ff;
 }
-#left-box { width: 61.8% }
-#right-box { width: 38.2% }
+#left-box {
+    padding:2%;
+    width: 57.8%
+}
+#right-box { 
+    padding:2%;
+    width: 34.2% 
+}
 
 .boxed {
     border:1px solid #b4d6f5;
@@ -152,17 +163,20 @@ ul {
     font-size:20px;
     color:white;
 }
-.add-new-task:hover{
+.add-new-task:hover {
     text-shadow:1px 1px #6a8c1a;
     color:#0d1d3b;
 }
+.task-div {
+}
+.task-div-body{
 
+}
 .task-li{
     margin:10px 0 5px 0;
     border:1px solid white;
 }
 .task-header{
-
 }
 .task-priority{
 
@@ -175,8 +189,11 @@ ul {
     font-size:23px;
 }
 .task-rate{
-    text-align:right;
-    margin-left:33px;
+    text-align:center;
+    position:absolute;
+    left:40%;
+}
+.task-remove{
 }
 .task-info{
     display:block;
@@ -235,6 +252,23 @@ div.help-text{
     vertical-align: sub;
     padding-left:20;
 }
+.opt-btn{
+    background: #1E95E5;
+    color: rgba(255, 255, 225, .7);
+    box-shadow: 0 1px 0 rgba(0,0,0,.05),0 1px 0 rgba(255,255,255,.15) inset;
+    border: 1px solid #147DCD;
+    cursor: pointer;
+    display: inline-block;
+    font-size: 14px;
+    line-height: 18px;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, .2);
+    padding: 6px 15px;
+    text-align: center;
+    vertical-align: baseline;
+    border-radius: 5px;
+}
+
+
 .input-button{
     background: #1E95E5;
     color: rgba(255, 255, 225, .7);
@@ -251,7 +285,6 @@ div.help-text{
     border-radius: 5px;
     float: left;
 }
-
 
 
 
