--- a/eagle/templates/common/index.html
+++ b/eagle/templates/common/index.html
@@ -22,19 +22,19 @@
     </div>
 
     <div id="right-box" class="right-box box-container clearfix">
-        <div id="mood-box" class="boxed clearfix">
+        <div id="mood-box" class="clearfix">
             <h2>mood-diaries</h2>
             {% include "task/mood_diary.html" %}
         </div>
 
-        <div id="digg-box" class="boxed clearfix">
+        <div id="digg-box" class="clearfix">
             <h2>digg</h2>
             {% include "task/digg.html" %}
         </div>
 
-        <div id="tag-box" class="boxed clearfix">
+        <div id="tag-box" class="clearfix">
             <h2>Most used tags</h2>
-            <div class="tagcloud clearfix">
+            <div class="boxed tagcloud clearfix">
             </div>
         </div>
     </div>
