--- a/eagle/templates/task/task_list.html
+++ b/eagle/templates/task/task_list.html
@@ -3,7 +3,7 @@
 
 {% for mode, tasks in tasks_list.items %}
 <br>
-<div id={{mode}} class="task-div clearfix">
+<div id={{mode}} class="task-div boxed clearfix">
     <a href="#" class="task-div-header">{{mode}}</a>
     <ul class="task-div-body">
         {% for atask in tasks %}
