--- a/eagle/templates/task/task_create.html
+++ b/eagle/templates/task/task_create.html
@@ -7,7 +7,8 @@
         <br>
 
 
-        <input class="task-detail-input" value="">
+        <textarea class="task-detail-input" value="">
+        </textarea>
         <br>
 
         <a class="task-tags">Tags</a>
