--- a/eagle/templates/base.html
+++ b/eagle/templates/base.html
@@ -8,6 +8,11 @@
         </title>
         <link rel="shortcut icon" href="{{STATIC_URL}}img/eagle.ico" />
         <link rel="stylesheet" media="all" charset="utf-8" href="{{STATIC_URL}}css/base.css"/>
+        <!--
+        <link rel="stylesheet" type="text/css" media="all" href="{{STATIC_URL}}css/reset.css" />
+        <link rel="stylesheet" type="text/css" media="all" href="{{STATIC_URL}}css/text.css" />
+        <link rel="stylesheet" type="text/css" media="all" href="{{STATIC_URL}}css/960_12_col.css" />
+        -->
         {% block extra_css %}{% endblock %}
         {% block head %}{% endblock %}
     </head>
@@ -16,7 +21,7 @@
         <div id="wrapper">
             <div id="header" class="clearfix">
                 <div id="logo" >
-                    <a href="/account/index/"></img></a>
+                    <a href="/account/index/"></a>
                 </div>
                 <div id="menu" class="menubar clearfix">
                     <ul class="header-navigation">
