--- a/eagle/templates/task/task_create.html
+++ b/eagle/templates/task/task_create.html
@@ -35,10 +35,11 @@
                 <a class="task-tags">Tags</a>
                 <input class="task-tags-input" value="">
             </div>
-        <br>
-        <div class="task-edit-option">
-            <button class="confirm opt-btn">confirm</button>
-            <button class="cancel opt-btn">cancel</button>
+            <br>
+            <div class="task-edit-option">
+                <button class="confirm opt-btn">confirm</button>
+                <button class="cancel opt-btn">cancel</button>
+            </div>
         </div>
     </div>
 </div>
